--- a/Lecture 3/Lecture_3_Exercises/Lecture_3_Exercises/Lecture_3_Exercises.csproj
+++ b/Lecture 3/Lecture_3_Exercises/Lecture_3_Exercises/Lecture_3_Exercises.csproj
@@ -7,4 +7,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="System.Runtime.Experimental" Version="6.0.2" />
+  </ItemGroup>
+
 </Project>
